--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,3 +26,5 @@ Suggests:
 Config/testthat/edition: 3
 RoxygenNote: 7.2.3
 VignetteBuilder: knitr
+URL: https://github.com/540pd/VisualizeNOAA
+BugReports: https://github.com/540pd/VisualizeNOAA/issues
